# VINS-Mono-noted

./: .gitignore  CMakeLists.txt  课程笔记
TEST/: test-feature_track_node-imgCallback.py
TEST/VINS-MONO-TEST-FISHER-UNPROJ/: CMakeLists.txt  main.cpp
camera_model/: CMakeLists.txt
camera_model/include/camodocal/camera_models/: Camera.h  EquidistantCamera.h  PinholeCamera.h
camera_model/src/camera_models/: Camera.cc  CameraFactory.cc  EquidistantCamera.cc  PinholeCamera.cc  ScaramuzzaCamera.cc
config/euroc/: euroc_config.yaml
feature_tracker/src/: feature_tracker.cpp  feature_tracker_node.cpp  parameters.cpp
pose_graph/src/: keyframe.cpp  keyframe.h  pose_graph.cpp  pose_graph.h  pose_graph_node.cpp
vins_estimator/src/: estimator.cpp  estimator.h  estimator_node.cpp  feature_manager.cpp  feature_manager.h  parameters.cpp
vins_estimator/src/factor/: imu_factor.h  integration_base.h  marginalization_factor.cpp  pose_local_parameterization.cpp  pose_local_parameterization.h  projection_factor.cpp  projection_factor.h  projection_td_factor.cpp  projection_td_factor.h
vins_estimator/src/initial/: initial_aligment.cpp  initial_ex_rotation.cpp  initial_sfm.cpp  initial_sfm.h  solve_5pts.cpp
vins_estimator/src/utility/: utility.cpp  utility.h  visualization.cpp
